SERVER-24981 Rewrite $limit optimization