src/mongo/db/pipeline/document_source_single_document_transformation.h
@@ -132,6 +132,7 @@ public:
                  : ChangeStreamRequirement::kWhitelist));
 
         constraints.canSwapWithMatch = true;
+        constraints.canSwapWithLimit = true;
         return constraints;
     }
 
